Fix selector overlapping.

--- a/src/sass/selector.sass
+++ b/src/sass/selector.sass
@@ -25,6 +25,10 @@ selector
     > div::after, > .item::after
       content: ""
 
+.input-group
+  .selectize-control.form-control
+    position: initial
+
 .selector-has-modal
   @extend .has-modal
   position: fixed
